# tartanToNerfstudio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tartan_air_to_nerfstudio.py  tartan_to_nerfstudio.py
tartanToNerfstudio/: tartan_to_nerfstudio.py
